Sparse object mapping for list of comparable scenarios